# bookworm-wizard-87

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  README_CPP.md  START_BOTH.md  build.bat  build.sh  index.html  vite.config.ts
backend/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  QUICK_START.md  README.md  build_simple.bat  build_simple.sh  build_with_path.bat  find_compiler.bat  rebuild_with_images.bat  rebuild_with_images.sh  run_server.bat  stop_server.bat
backend/include/: Book.h  JsonHelper.h  Storage.h  User.h
backend/src/: AuthService.cpp  Book.cpp  BookService.cpp  JsonHelper.cpp  ReadingList.cpp  Storage.cpp  User.cpp  server.cpp
include/: AuthService.h  BookService.h  ReadingList.h  UI.h
src/: AuthService.cpp  Book.cpp  ReadingList.cpp  Storage.cpp  UI.cpp  User.cpp  index.css  main.cpp
src/components/: BookCard.tsx  FilterBar.tsx
src/pages/: Auth.tsx  Dashboard.tsx  Index.tsx
src/services/: api.ts
src/types/: book.ts
